--- a/Lesson_40/notes/static/css/styles.css
+++ b/Lesson_40/notes/static/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #9a4545;
+    background-color: #e5c8c8;
 }
 
 h1 {
@@ -15,7 +15,7 @@ h1 {
 }
 
 .note {
-    background: rgb(115, 7, 165);
+    background: rgb(200, 193, 204);
     padding: 15px;
     margin: 10px;
     border-radius: 5px;
